# cpp-base

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
01/: Makefile  allocator.cpp  allocator.h  test.cpp
docs/: local.md
example/: Dockerfile  Makefile
example/src/: my_class.cpp  my_class.h
example/tests/: test_my_class.cpp
gtest-fix/: Makefile  main.cpp  module.cpp  module_test.cpp
hw1/: Makefile  allocator.cpp  allocator.h  main.cpp  test.cpp
hw_1/: .clang-format  Make  interface.hpp  main.cpp  realization.cpp  tests.cpp
pish-fix/: CMakeLists.txt  Dockerfile  Makefile  out.txt
pish-fix/src/: my_class.cpp  my_class.h
pish-fix/tests/: test_my_class.cpp
